scores by school type.

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "978c5877",
+   "id": "ca93dc68",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "eceb2914",
+   "id": "1caefbe1",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f1b2af7b",
+   "id": "18852129",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "10cbdac4",
+   "id": "4d2f2995",
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4459ae2b",
+   "id": "7ee2dcb9",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a2b48a46",
+   "id": "29ac60b9",
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5a00b4b6",
+   "id": "952ddca6",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4c6d3da5",
+   "id": "439c1994",
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "156811ed",
+   "id": "3bd157bf",
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "991f2915",
+   "id": "64b08e3b",
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d4cc2eed",
+   "id": "6aebb20c",
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2a58bcfe",
+   "id": "636811e0",
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b01d36bd",
+   "id": "61d59f89",
    "metadata": {},
    "outputs": [
     {
@@ -1119,7 +1119,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "049b1ecf",
+   "id": "a71638e4",
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9aad3dc2",
+   "id": "25541887",
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f252281e",
+   "id": "2dfac444",
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fa4ce7c9",
+   "id": "20e25452",
    "metadata": {},
    "outputs": [
     {
@@ -1351,7 +1351,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c4b999f5",
+   "id": "35c4e33f",
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c1518c8f",
+   "id": "c983b46a",
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "cf4f8d38",
+   "id": "58a31c3d",
    "metadata": {},
    "outputs": [
     {
@@ -1542,7 +1542,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "17afdde7",
+   "id": "aff3e06f",
    "metadata": {},
    "outputs": [
     {
@@ -1685,7 +1685,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a88aa828",
+   "id": "9f0364e9",
    "metadata": {},
    "outputs": [
     {
@@ -1707,7 +1707,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "831a85eb",
+   "id": "b1b81914",
    "metadata": {},
    "outputs": [
     {
@@ -1730,7 +1730,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f6aa66e4",
+   "id": "4802af06",
    "metadata": {},
    "outputs": [
     {
@@ -1753,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "75fa328e",
+   "id": "8492c053",
    "metadata": {},
    "outputs": [
     {
@@ -1833,7 +1833,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "06bd7b1b",
+   "id": "858bb44a",
    "metadata": {},
    "outputs": [
     {
@@ -1858,7 +1858,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "d6411d47",
+   "id": "ec9191f7",
    "metadata": {},
    "outputs": [
     {
@@ -1882,7 +1882,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "163f1ab8",
+   "id": "708e93b9",
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +1964,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "cc8c56cc",
+   "id": "f5fae7d5",
    "metadata": {},
    "outputs": [
     {
@@ -2039,7 +2039,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "f7af7cfc",
+   "id": "f6c017a0",
    "metadata": {},
    "outputs": [
     {
@@ -2078,7 +2078,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "9d4223b4",
+   "id": "5e36defe",
    "metadata": {},
    "outputs": [
     {
@@ -2207,7 +2207,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "2ba6df4c",
+   "id": "fbe6146e",
    "metadata": {},
    "outputs": [
     {
@@ -2246,7 +2246,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "567e4a8f",
+   "id": "62cda67e",
    "metadata": {},
    "outputs": [
     {
@@ -2284,7 +2284,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "46e3bab0",
+   "id": "bdaf9246",
    "metadata": {},
    "outputs": [
     {
@@ -2323,7 +2323,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "23249221",
+   "id": "0c06f888",
    "metadata": {},
    "outputs": [
     {
@@ -2361,7 +2361,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "7b9280bf",
+   "id": "2eb57604",
    "metadata": {},
    "outputs": [
     {
@@ -2396,7 +2396,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "47e15b27",
+   "id": "714cea27",
    "metadata": {},
    "outputs": [
     {
@@ -2435,7 +2435,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "24f4e09f",
+   "id": "2a7f6b8c",
    "metadata": {},
    "outputs": [
     {
@@ -2473,7 +2473,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "4c4d451d",
+   "id": "76eed5f4",
    "metadata": {},
    "outputs": [
     {
@@ -2716,7 +2716,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "cb4a93eb",
+   "id": "0f4472ae",
    "metadata": {},
    "outputs": [
     {
@@ -2758,7 +2758,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "7c42ca25",
+   "id": "32775f29",
    "metadata": {},
    "outputs": [
     {
@@ -2799,7 +2799,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "74612ad2",
+   "id": "5843496d",
    "metadata": {},
    "outputs": [
     {
@@ -2942,7 +2942,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "444c01e5",
+   "id": "b4596c0c",
    "metadata": {},
    "outputs": [
     {
@@ -2983,7 +2983,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "88b57151",
+   "id": "b3273d4c",
    "metadata": {},
    "outputs": [
     {
@@ -3137,7 +3137,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "ea1609cd",
+   "id": "672942e0",
    "metadata": {},
    "outputs": [
     {
@@ -3444,7 +3444,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "f469a999",
+   "id": "11fe7bba",
    "metadata": {},
    "outputs": [
     {
@@ -3589,7 +3589,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "24951b7d",
+   "id": "c811b116",
    "metadata": {
     "scrolled": true
    },
@@ -3734,7 +3734,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "aadd5cf8",
+   "id": "292ceeac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3748,7 +3748,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "5e6e4f7e",
+   "id": "18415af7",
    "metadata": {},
    "outputs": [
     {
@@ -3768,7 +3768,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "b38db90e",
+   "id": "93a05afc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3786,7 +3786,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "925a3408",
+   "id": "8896eb7a",
    "metadata": {},
    "outputs": [
     {
@@ -3818,7 +3818,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "fb2ffb98",
+   "id": "919f7689",
    "metadata": {},
    "outputs": [
     {
@@ -3850,7 +3850,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "3c9fd154",
+   "id": "6bcf9dc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3867,7 +3867,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "33856f50",
+   "id": "c16d369d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3885,7 +3885,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "05123ccb",
+   "id": "1804f25a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3902,7 +3902,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "351f4067",
+   "id": "220f1106",
    "metadata": {},
    "outputs": [
     {
@@ -4007,7 +4007,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "38581f4c",
+   "id": "72b6875d",
    "metadata": {},
    "outputs": [
     {
@@ -4113,7 +4113,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "f7a50275",
+   "id": "ad22c23b",
    "metadata": {},
    "outputs": [
     {
@@ -4220,7 +4220,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "a8e96b5b",
+   "id": "0a913ebd",
    "metadata": {},
    "outputs": [
     {
@@ -4327,7 +4327,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "56c1eb70",
+   "id": "65e01b48",
    "metadata": {},
    "outputs": [
     {
@@ -4357,7 +4357,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "c482f5fc",
+   "id": "83c39dcc",
    "metadata": {},
    "outputs": [
     {
@@ -4384,7 +4384,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "ee0c9d45",
+   "id": "9d18256d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4396,7 +4396,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "8bbf55ba",
+   "id": "c7761409",
    "metadata": {},
    "outputs": [
     {
@@ -4554,7 +4554,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "dddaba8d",
+   "id": "87067221",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4573,7 +4573,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "41df01ea",
+   "id": "d9f8fa93",
    "metadata": {},
    "outputs": [
     {
@@ -4692,7 +4692,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "ea0ceb82",
+   "id": "e22329e9",
    "metadata": {},
    "outputs": [
     {
@@ -4814,7 +4814,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "bfbc7b18",
+   "id": "69eeb106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4826,7 +4826,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "9e466257",
+   "id": "644a59fa",
    "metadata": {},
    "outputs": [
     {
@@ -4990,7 +4990,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "3e204d8e",
+   "id": "de8493f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5009,7 +5009,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "2b8230e7",
+   "id": "93c3a29f",
    "metadata": {},
    "outputs": [
     {
@@ -5111,7 +5111,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "25d980fc",
+   "id": "603ef024",
    "metadata": {},
    "outputs": [
     {
@@ -5216,10 +5216,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48f76143",
+   "id": "e74596db",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
   }
  ],
  "metadata": {
